$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Jul-2009 Andrew Eddie
 + Add accessability tweaks to admin mod_menu.
 + [#16547] Cancel button on Article Manager parameters does not work
 ^ All arguments are now optional in JParameter::__construct.
 ^ Refactored com_config.
 + Added support for tabbed configuration files in com_config component support.

04-Jul-2009 Gergo Erdosi
 - Removed closing tag in configuration.php file.
 + Added new parameter option 'closingtag' to JRegistryFormatPHP::objectToString().
 ^ Syncronized configuration.php-dist with the changes.

04-Jul-2009 Andrew Eddie
 ^ SQL CHANGE: Add missing entries in jos_extensions.
 + Added new administrator template: bluestork.
 ^ Refactored admin mod_menu; added layout support.
 # Fixed bugs in module layout list parameter.
 ^ Menu changes based on Ron Severdia's suggestions added.
 # [#15509] JHTML::_() breaks on PHP 5.3.0 when calling methods which uses a reference in its argument list.
 # [#15813] PHP Notice During Installation
 # [#16527] JQuery class not imported in form/fields/accesslevels.php
 # [#16691] [patch] docblock typos in html.php
 ^ [#14459] JProfiler Time elapsed, Memory used
 # [#15367] JRegistry::setValue() return value is incorrect as per documentation
 + Added JRegistry::__toString magic method.
 # [#16941] administrator/backups not created
 - Removed JPATH_BACKUPS
 # [#15411] Invalid HTML in com_member templates
 ^ [#17021] Refactoring administrator/com_admin
 ^ Added Robs refactoring of com_config, refactored some more.

02-Jul-2009 Andrew Eddie
 - Deprecated JDatabase::stderr
 + [#16045] Added JDatabase::getNextRow, JDatabase::getNextObject

01-Jul-2009 Gergo Erdosi
 # Fixed editor and editors form fields.

01-Jul-2009 Andrew Eddie
 ^ Changed successful translation marker in JLanguage from &bull; to ** to avoid double escaping ugliness.
 + Added new configuration variable to enable (default) or disable the tp=1 feature.