@@ -58,7 +58,11 @@ class ContentViewFeatured extends JView
 		JToolBarHelper::custom('featured.publish', 'publish.png', 'publish_f2.png', 'Publish', true);
 		JToolBarHelper::custom('featured.unpublish', 'unpublish.png', 'unpublish_f2.png', 'Unpublish', true);
 		JToolBarHelper::custom('featured.delete','delete.png','delete_f2.png','JToolbar_Remove', true);
+		JToolBarHelper::divider();
 		JToolBarHelper::custom('article.edit', 'edit.png', 'edit_f2.png', 'Edit', true);
 		JToolBarHelper::custom('article.edit', 'new.png', 'new_f2.png', 'New', false);
+		JToolBarHelper::divider();
+		JToolBarHelper::preferences('com_content');
+		JToolBarHelper::help('screen.content.featured');
 	}
 }
