@@ -8,6 +8,13 @@ CONTENT_SUBMENU_ARTICLES=Articles
 CONTENT_SUBMENU_CATEGORIES=Categories
 CONTENT_SUBMENU_FEATURED=Featured
 
+CONTENT_CONFIG_GLOBAL_SETTINGS_DESC=These are global settings that apply for the Articles Component.
+CONTENT_CONFIG_GLOBAL_SETTINGS_LABEL=Global Settings
+CONTENT_CONFIG_ARTICLE_SETTINGS_DESC=These settings apply for articles when they are displayed on the web site unless they are changed by the individual article or menu settings.
+CONTENT_CONFIG_ARTICLE_SETTINGS_LABEL=Articles
+CONTENT_CONFIG_CATEGORY_SETTINGS_DESC=These settings apply for category and featured pages when they are displayed on the web site unless they are changed by the individual category or menu settings.
+CONTENT_CONFIG_CATEGORY_SETTINGS_LABEL=Categories &amp; Featured
+
 CONTENT_ITEMS_SEARCH_FILTER=Search title or alias. Prefix with id: to search for an article id.
 
 CONTENT_ARTICLES_TITLE=Article Manager: Articles
@@ -29,23 +36,52 @@ CONTENT_ATTRIBS_LINKED_TITLES_DESC=Linked Titles Desc
 CONTENT_ATTRIBS_LINKED_TITLES_LABEL=Linked Titles
 CONTENT_ATTRIBS_LINK_CATEGORY_DESC=Link Category Desc
 CONTENT_ATTRIBS_LINK_CATEGORY_LABEL=Link Category
-CONTENT_ATTRIBS_READMORE_DESC=Readmore Desc
-CONTENT_ATTRIBS_READMORE_LABEL=Readmore
-CONTENT_ATTRIBS_SHOW_AUTHOR_DESC=Show Author Desc
+CONTENT_ATTRIBS_SHOW_READMORE_DESC=If set to Show, the Read more... Link will show if Main text has been provided for the Article.
+CONTENT_ATTRIBS_SHOW_READMORE_LABEL=Show 'Read More'
+
+CONTENT_ATTRIBS_SHOW_AUTHOR_DESC=If set to Show, the Name of the Author will be displayed.  This a global setting but can be changed at Menu and Article levels.
 CONTENT_ATTRIBS_SHOW_AUTHOR_LABEL=Show Author
 CONTENT_ATTRIBS_SHOW_CATEGORY_DESC=Show Category Desc
 CONTENT_ATTRIBS_SHOW_CATEGORY_LABEL=Show Category
-CONTENT_ATTRIBS_SHOW_CREATE_DATE_DESC=Show Create Date Desc
+CONTENT_ATTRIBS_SHOW_CREATE_DATE_DESC=If set to Show, the date and time an Article was created will be displayed. This a global setting but can be changed at Menu and Article levels.
 CONTENT_ATTRIBS_SHOW_CREATE_DATE_LABEL=Show Create Date
-CONTENT_ATTRIBS_SHOW_EMAIL_ICON_DESC=Show Email Icon Desc
+CONTENT_ATTRIBS_SHOW_EMAIL_ICON_DESC=Show/Hide the e-mail information. If you set to Show, the address will be protected from spambots by JavaScript Cloaking.
 CONTENT_ATTRIBS_SHOW_EMAIL_ICON_LABEL=Show Email Icon
 CONTENT_ATTRIBS_SHOW_INTRO_LABEL=Show Intro
-CONTENT_ATTRIBS_SHOW_MODIFY_DATE_DESC=Show Modify Date Desc
+CONTENT_ATTRIBS_SHOW_INTRO_DESC=Show Intro Desc
+CONTENT_ATTRIBS_SHOW_MODIFY_DATE_DESC=If set to Show, the date and time an Article was last modified will be displayed. This a global setting but can be changed at Menu and Article levels.
 CONTENT_ATTRIBS_SHOW_MODIFY_DATE_LABEL=Show Modify Date
-CONTENT_ATTRIBS_SHOW_PRINT_ICON_DESC=Show Print Icon Desc
+CONTENT_ATTRIBS_SHOW_PRINT_ICON_DESC=Show/Hide the Item Print button (only affects this page).
 CONTENT_ATTRIBS_SHOW_PRINT_ICON_LABEL=Show Print Icon
 CONTENT_ATTRIBS_SHOW_TITLE_DESC=Show Title Desc
 CONTENT_ATTRIBS_SHOW_TITLE_LABEL=Show Title
+CONTENT_ATTRIBS_SHOW_NAVIGATION_DESC=fieldNAVIGATIONARTICLE
+CONTENT_ATTRIBS_SHOW_NAVIGATION_LABEL=Show Navigation
+
+CONTENT_ATTRIBS_SHOW_ICONS_DESC=Print and E-mail will utilise Icons or Text
+CONTENT_ATTRIBS_SHOW_ICONS_LABEL=Show Icons
+CONTENT_ATTRIBS_SHOW_HITS_DESC=If set to Show, the number of Hits on a particular Article will be displayed. This a global setting but can be changed at Menu and Article levels.
+CONTENT_ATTRIBS_SHOW_HITS_LABEL=Show Hits
+CONTENT_ATTRIBS_SHOW_ICONS_DESC=Print and E-mail will utilise Icons or Text
+CONTENT_ATTRIBS_FEED_SUMMARY_DESC=TIPSHOWFEEDITEM
+CONTENT_ATTRIBS_FEED_SUMMARY_LABEL=For each feed item show
+CONTENT_ATTRIBS_FILTERING_OPTIONS_DESC=TIPFILTERINGOPTIONS
+CONTENT_ATTRIBS_FILTERING_OPTIONS_LABEL=Filtering Options
+CONTENT_ATTRIBS_FILTER_GROUPS_DESC=TIPFILTERGROUPS
+CONTENT_ATTRIBS_FILTER_GROUPS_LABEL=Filter Groups
+CONTENT_ATTRIBS_FILTER_TYPE_DESC=TIPSFILTERTYPE
+CONTENT_ATTRIBS_FILTER_TYPE_LABEL=Filter Type
+CONTENT_ATTRIBS_FILTER_TAGS_DESC=TIPSFILTERTAGS
+CONTENT_ATTRIBS_FILTER_TAGS_LABEL=Filter Tags
+CONTENT_ATTRIBS_FILTER_ATTRIBUTES_DESC=TIPSFILTERATTRIBUTES
+CONTENT_ATTRIBS_FILTER_ATTRIBUTES_LABEL=Filter Attributes
+
+CONTENT_OPTION_BLACK_LIST=Black List (Default)
+CONTENT_OPTION_WHITE_LIST=White List
+CONTENT_OPTION_NO_HTML=No HTML
+CONTENT_OPTION_INTRO_TEXT=Intro Text
+CONTENT_OPTION_FULL_TEXT=Full Text
+
 CONTENT_CREATED_BY_ALIAS_DESC=Created by alias Desc
 CONTENT_CREATED_BY_ALIAS_LABEL=Created by alias
 CONTENT_CREATED_BY_DESC=Created by Desc
@@ -78,3 +114,9 @@ CONTENT_XREFERENCE_LABEL=External Reference
 CONTENT_FIELDSET_OPTIONS=Basic Options
 CONTENT_FIELDSET_METADATA=Metadata Options
 CONTENT_FIELDSET_PUBLISHING=Publishing Details
+
+# Options
+
+CONTENT_ATTRIBS_SHOW_UNAUTH_LINKS_DESC=If set to Yes, links to registered content will be shown even if you are not logged in. You will need to log in to access the full item.
+CONTENT_ATTRIBS_SHOW_UNAUTH_LINKS_LABEL=Show Unauthorised Links
+
